 _______  __   __  ______   ___   _______    _______  _     _  ___   _______  _______  __   __  _______  ______   
|   _   ||  | |  ||      | |   | |       |  |       || | _ | ||   | |       ||       ||  | |  ||       ||    _ |  
|  |_|  ||  | |  ||  _    ||   | |   _   |  |  _____|| || || ||   | |_     _||       ||  |_|  ||    ___||   | ||  
|       ||  |_|  || | |   ||   | |  | |  |  | |_____ |       ||   |   |   |  |       ||       ||   |___ |   |_||_ 
|       ||       || |_|   ||   | |  |_|  |  |_____  ||       ||   |   |   |  |      _||       ||    ___||    __  |
|   _   ||       ||       ||   | |       |   _____| ||   _   ||   |   |   |  |     |_ |   _   ||   |___ |   |  | |
|__| |__||_______||______| |___| |_______|  |_______||__| |__||___|   |___|  |_______||__| |__||_______||___|  |_|

==================================================================================================================

CHANGE LOG
=---------= [V1.0]
1. Settings GUI interface
2. Setup script
3. Script to switch
4. Desktop link for double-click hot-swap